--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 spring.application.name=task-manager
-spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/task_manager}
-spring.datasource.username=${DB_USER:postgres}
-spring.datasource.password=${DB_PASSWORD:}
-spring.jpa.hibernate.ddl-auto=update
+
+spring.config.import=optional:file:.env[.properties]
+
+spring.datasource.url=${DB_URL}
+
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+
+spring.jpa.hibernate.ddl-auto=validate
+
+# Keep hikari small when using Neon Pooler
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=1
